--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BasicChatApp</string>
+    <string name="username">Username</string>
+    <string name="login">Login</string>
 </resources>
